--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "dependencies": "^0.0.1",
     "firebase": "^9.9.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
