--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "date-fns": "^2.29.1",
     "dependencies": "^0.0.1",
     "firebase": "^9.9.1",
     "firebase-tools": "^11.4.2",
