--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ada Room Res",
+  "name": "ada-reservation",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "2051x600"
     },
     {
-      "src": "logo512.png",
+      "src": "web_pic.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "1145x711"
     }
   ],
   "start_url": ".",
