--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": "^0.0.1",
     "firebase": "^9.9.1",
     "firebase-tools": "^11.4.2",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
